go.talks/present: Tweak H1 CSS to avoid overlap between title and subtitle.
R=adg
CC=golang-dev
https://golang.org/cl/7098070

--- a/present/static/styles.css
+++ b/present/static/styles.css
@@ -253,6 +253,7 @@ h1 {
   padding: 0;
   margin: 0;
   margin-top: 200px;
+  margin-bottom: 5px;
   padding-right: 40px;
 
   font-weight: 600;
